<resources>
    <string name="app_name">DeviceInfo</string>

    <string name="starbuzz_logo">Starbuzz logo</string>
    <string name="title_activity_drink_category">Drink Category</string>
    <string name="pizzas">Bits and Pizzas</string>
    <string name="order">Order</string>
    <string name="title_top">Top fragment</string>

    <string-array name="starbuzz">
        <item>Drinks</item>
        <item>NewDrinks</item>
        <item>Food</item>
        <item>Stores</item>
    </string-array>

    <string-array name="options">
        <item>Starbuzz</item>
        <item>PhotoGallery</item>
        <item>StopWatch</item>
        <item>Crime Intent</item>
        <item>BitsAndPizzas</item>
        <item>Workout</item>
        <item>Joke</item>
    </string-array>

    <string-array name="pizzas">
        <item>Diavolo</item>
        <item>Funghi</item>
    </string-array>

    <string-array name="pasta">
        <item>Spaghetti Bolognese</item>
        <item>Lasagne</item>
    </string-array>

    <string-array name="stores">
        <item>Cambridge</item>
        <item>Sebastopol</item>
    </string-array>

    <string-array name="titles">
        <item>Home</item>
        <item>Pizzas</item>
        <item>Pasta</item>
        <item>Stores</item>
    </string-array>

    <string name="favorite">Favorite</string>
    <string name="favorites">Your favorite drinks:</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_create_order">Create Order</string>
    <string name="action_share">Share</string>

    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>

    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>

    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <string name="hello_world_device_info">Hello World! Device Info</string>
    <string name="info1">Phone</string>
    <string name="info2" translatable="false">Networks</string>
    <string name="info3">Traffic</string>
    <string name="info4">WifiInfo</string>
    <string name="info5">Location</string>
    <string name="info6">Env</string>
    <string name="info7">Cam</string>
    <string name="info8">Sensors</string>
    <string name="info9">Display</string>
    <string name="info10">CPU Info</string>
    <string name="info11">Memory</string>
    <string name="info12">OS Disc</string>
    <string name="output">Отображение кратких данных об устройстве пользователя.Информация о процессоре,
        об оперативной памяти, о датчиках, о сетях, о телефоне и т.д.
    </string>
    <string name="hello_quiz">Canberra is the capital of Australia</string>
    <string name="false_button">Нет</string>
    <string name="true_button">Да</string>
    <string name="correct_toast">Correct! Правильно</string>
    <string name="incorrect_toast">Incorrect! Неправильно</string>
    <string name="next_button">Далее</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="todo">description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>