<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_create_order"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="1"
        android:title="@string/action_create_order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="2"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>
        <!--app:actionProviderClass="android.widget.ShareActionProvider"-->
</menu>